# c

./: stu.txt
cha1/: rec.c
cha11/: enum.c  point.c  point.h  runPoint.c  struct.c  tempCodeRunnerFile.c  union.c
cha12/: bit.c  stauts.c
cha14/: file.c  fileIO.c  markStudentInfo.c  stu.txt
cha15/: Socket.c
cha16/: StudentScoreData.txt  StudentsScoreManageSystem.c  StudentsScoreManageSystem.rar
cha5/: io.c  tempCodeRunnerFile.c
demo/: hello.c  test.c
dev_c/: Makefile.win  helpFunc.cpp  main.cpp  point.cpp  point.dev  point.h  point.layout
project/cmakePro/: CMakeLists.txt  main.cpp  source.cpp
project/projectStruct/: cmTemplate.txt  main.c  source.c  source.h
